--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -59,6 +59,22 @@
     transition: background-color 0.2s;
 }
 
-.countdownButton:hover {
+.countdownButton:not(disabled):hover {
     background: var(--blue-dark);
+}
+
+.countdownButtonActive {
+    background: var(--red);
+    color: var(--white);
+}
+
+.countdownButtonActive:not(disabled):hover {
+    background: var(--white);
+    color: var(--red);
+}
+
+.countdownButton:disabled {
+    background: var(--gray);
+    color: var(--white);
+    cursor: not-allowed;
 }
